syntax = "proto3";

package proto.shortener;

option go_package = "github.com/egor-zakharov/tiny-url/internal/proto";

message StatsRequest{}

message StatsResponse {
  int64 urls = 1;
  int64 users = 2;
}

message GetURLRequest {
  string short_url = 1;
}

message GetURLResponse {
}

message AuthRequest {

}

message AuthResponse {
  string session_token = 1;
}

message PostShortenRequest {
  string url = 1;
}

message PostShortenResponse {
  string result = 1;
}

message InShortenBatch {
  string correlation_id = 1 ;
  string original_url = 2 ;
}

message OutShortenBatch {
  string correlation_id = 1;
  string short_url = 2;
}

message PostShortenBatchRequest {
  repeated InShortenBatch in = 1;
}

message PostShortenBatchResponse {
  repeated OutShortenBatch out = 1;
}

message GetAllRequest {
}

message OutGetAll {
  string short_url = 1;
  string original_url = 2;
}

message GetAllResponse {
  repeated OutGetAll out = 1;
}

message DeleteBatchRequest {
  repeated string short_url = 1;
}

message DeleteBatchResponse {
 string result = 1;
}

service ShortenerService {
  rpc Stats(StatsRequest) returns (StatsResponse);
  rpc GetURL(GetURLRequest) returns (GetURLResponse);
  rpc Auth(AuthRequest) returns (AuthResponse);
  rpc PostShorten(PostShortenRequest) returns (PostShortenResponse);
  rpc PostShortenBatch(PostShortenBatchRequest) returns (PostShortenBatchResponse);
  rpc GetAll(GetAllRequest) returns (GetAllResponse);
  rpc DeleteBatch(DeleteBatchRequest) returns (DeleteBatchResponse);
}